Added table to readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -35,6 +35,10 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(functionlist)
+
 ## basic example code
+functions |>
+  head() |>
+  knitr::kable()
 ```
 
